--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@ password:<br>
 <input type="submit" value="submit">
 <br>
 <br>
-<a href="http//www.axis colleges.com">axis colleges.</a>
+<a href="http//www.axis college.com">axis colleges.</a>
 </body>
 </html>
